--- a/CGALDotNet/CGALDotNet.csproj
+++ b/CGALDotNet/CGALDotNet.csproj
@@ -1,10 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>netframework4.7</TargetFramework>
     <RunPostBuildEvent>OnBuildSuccess</RunPostBuildEvent>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
-    <DocumentationFile>F:\Projects\Visual Studio Projects\CGALDotNet\CGALDotNet\CGALDotNet.xml</DocumentationFile>
+    <DocumentationFile>D:\source\repos\Ryuukeisyou\CGALDotNet\CGALDotNet\CGALDotNet.xml</DocumentationFile>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
@@ -14,11 +14,11 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <PlatformTarget>AnyCPU</PlatformTarget>
-    <DocumentationFile>F:\Projects\Visual Studio Projects\CGALDotNet\CGALDotNet\CGALDotNet.xml</DocumentationFile>
+    <DocumentationFile>D:\source\repos\Ryuukeisyou\CGALDotNet\CGALDotNet\CGALDotNet.xml</DocumentationFile>
   </PropertyGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec Command="xcopy &quot;$(ProjectDir)bin\$(ConfigurationName)\netcoreapp3.1\CGALDotNet.dll&quot; &quot;F:\Projects\Unity Projects\CGALDotNetUnity\Assets\CGALDotNet\Plugins&quot; /y&#xD;&#xA;xcopy &quot;$(ProjectDir)bin\$(ConfigurationName)\netcoreapp3.1\CGALDotNet.pdb&quot; &quot;F:\Projects\Unity Projects\CGALDotNetUnity\Assets\CGALDotNet\Plugins&quot; /y&#xD;&#xA;xcopy &quot;$(ProjectDir)CGALDotNet.xml&quot; &quot;F:\Projects\Unity Projects\CGALDotNetUnity\Assets\CGALDotNet\Plugins&quot; /y&#xD;&#xA;&#xD;&#xA;xcopy &quot;$(SolutionDir)x64\$(ConfigurationName)\CGALWrapper.dll&quot; &quot;F:\Projects\Unity Projects\CGALDotNetUnity\Assets\CGALDotNet\Plugins&quot; /y&#xD;&#xA;xcopy &quot;C:\dev\vcpkg\installed\x64-windows\bin\gmp.dll&quot; &quot;F:\Projects\Unity Projects\CGALDotNetUnity\Assets\CGALDotNet\Plugins&quot; /y&#xD;&#xA;xcopy &quot;C:\dev\vcpkg\installed\x64-windows\bin\mpfr-6.dll&quot; &quot;F:\Projects\Unity Projects\CGALDotNetUnity\Assets\CGALDotNet\Plugins&quot; /y&#xD;&#xA;" />
+    <Exec Command="xcopy &quot;$(ProjectDir)bin\$(ConfigurationName)\netframework4.7\CGALDotNet.dll&quot; &quot;C:\Program Files\Boyi\DesignTools&quot; /y&#xD;&#xA;xcopy &quot;$(ProjectDir)bin\$(ConfigurationName)\netframework4.7\CGALDotNet.pdb&quot; &quot;C:\Program Files\Boyi\DesignTools&quot; /y&#xD;&#xA;xcopy &quot;$(ProjectDir)CGALDotNet.xml&quot; &quot;C:\Program Files\Boyi\DesignTools&quot; /y&#xD;&#xA;&#xD;&#xA;xcopy &quot;$(SolutionDir)x64\$(ConfigurationName)\CGALWrapper.dll&quot; &quot;C:\Program Files\Boyi\DesignTools&quot; /y&#xD;&#xA;xcopy &quot;d:\dev\vcpkg\installed\x64-windows\bin\gmp.dll&quot; &quot;C:\Program Files\Boyi\DesignTools&quot; /y&#xD;&#xA;xcopy &quot;d:\dev\vcpkg\installed\x64-windows\bin\mpfr-6.dll&quot; &quot;C:\Program Files\Boyi\DesignTools&quot; /y&#xD;&#xA;" />
   </Target>
 
   <ItemGroup>
@@ -31,8 +31,23 @@
 
   <ItemGroup>
     <Reference Include="CGALDotNetGeometry">
-      <HintPath>..\..\CGALDotNetGeometry\CGALDotNetGeometry\bin\Release\netcoreapp3.1\CGALDotNetGeometry.dll</HintPath>
+      <HintPath>..\..\CGALDotNetGeometry\CGALDotNetGeometry\bin\Release\netframework4.7\CGALDotNetGeometry.dll</HintPath>
     </Reference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
