--- a/CGALDotNet/CGALDotNet.csproj
+++ b/CGALDotNet/CGALDotNet.csproj
@@ -18,7 +18,7 @@
   </PropertyGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec Command="xcopy &quot;$(ProjectDir)bin\$(ConfigurationName)\netframework4.7\CGALDotNet.dll&quot; &quot;C:\Program Files\Boyi\DesignTools&quot; /y&#xD;&#xA;xcopy &quot;$(ProjectDir)bin\$(ConfigurationName)\netframework4.7\CGALDotNet.pdb&quot; &quot;C:\Program Files\Boyi\DesignTools&quot; /y&#xD;&#xA;xcopy &quot;$(ProjectDir)CGALDotNet.xml&quot; &quot;C:\Program Files\Boyi\DesignTools&quot; /y&#xD;&#xA;&#xD;&#xA;xcopy &quot;$(SolutionDir)x64\$(ConfigurationName)\CGALWrapper.dll&quot; &quot;C:\Program Files\Boyi\DesignTools&quot; /y&#xD;&#xA;xcopy &quot;d:\dev\vcpkg\installed\x64-windows\bin\gmp.dll&quot; &quot;C:\Program Files\Boyi\DesignTools&quot; /y&#xD;&#xA;xcopy &quot;d:\dev\vcpkg\installed\x64-windows\bin\mpfr-6.dll&quot; &quot;C:\Program Files\Boyi\DesignTools&quot; /y&#xD;&#xA;" />
+    <Exec Command="xcopy &quot;$(ProjectDir)bin\$(ConfigurationName)\netframework4.7\CGALDotNet.dll&quot; &quot;C:\Program Files\Boyi\DesignTools&quot; /y&#xD;&#xA;xcopy &quot;$(ProjectDir)bin\$(ConfigurationName)\netframework4.7\CGALDotNet.pdb&quot; &quot;C:\Program Files\Boyi\DesignTools&quot; /y&#xD;&#xA;xcopy &quot;$(ProjectDir)CGALDotNet.xml&quot; &quot;C:\Program Files\Boyi\DesignTools&quot; /y&#xD;&#xA;&#xD;&#xA;xcopy &quot;$(SolutionDir)x64\$(ConfigurationName)\CGALWrapper.dll&quot; &quot;C:\Program Files\Boyi\DesignTools&quot; /y&#xD;&#xA;xcopy &quot;d:\dev\vcpkg\installed\x64-windows\bin\gmp-10.dll&quot; &quot;C:\Program Files\Boyi\DesignTools&quot; /y&#xD;&#xA;xcopy &quot;d:\dev\vcpkg\installed\x64-windows\bin\mpfr-6.dll&quot; &quot;C:\Program Files\Boyi\DesignTools&quot; /y&#xD;&#xA;" />
   </Target>
 
   <ItemGroup>
